<resources>
    <string name="app_name">Android Jetpack</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android-Jetpack</string>
    <string name="nav_header_subtitle">darshnakumari01234@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_examples">Examples</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_rate_us">Rate Us</string>
    <string name="menu_website_url">Website</string>
    <string name="menu_share">Share</string>
    <string name="java">Java</string>
    <string name="xml">XML</string>
    <string name="extra">Extra</string>
    <string name="two_way_data_binding_str">Two Way Data Binding</string>
    <string name="data_binding_str">Data Binding</string>
    <string name="room_str">Room</string>
    <string name="bottom_navigation_str">Bottom Navigation</string>
    <string name="mvvm_str">MVVM</string>
    <string name="work_manager_str">Work Manager</string>
    <string name="str_progress_message">Please wait..</string>
    <string name="communicate">Communicate</string>
    <string name="interview">Interview Que</string>
    <string name="colon">:</string>
    <string name="type">Type</string>
    <string name="title">Title</string>
    <string name="organizer">Organizer</string>
    <string-array name="topics_list">
        <item>Data Binding</item>
        <item>Navigation</item>
        <item>Room</item>
        <item>View Model</item>
        <item>Live Data</item>
        <item>Paging</item>
        <item>Work Manager</item>
    </string-array>
    <string name="send_to">dashnakumari01234@gmail.com</string>
    <string name="education">Education</string>
    <string name="experience">Experience</string>
    <string name="technical_skill">Technical Skill</string>
    <string name="view_source_code">View Source Code</string>
    <string name="please_wait">Please wait</string>
    <string name="check_internet">Please check internet</string>
    <string name="event_str">Event</string>
    <string name="startDate">Start Date</string>
    <string name="endDate">End Date</string>
    <string name="website">Website</string>
    <string name="email">Email</string>
    <string name="venue">Venue</string>
    <string name="address">Address</string>
    <string name="please_enter_your_email_id">Please Enter your Email ID</string>
    <string name="please_enter_your_name">Please Enter Your Name</string>
    <string name="check_internet_connection">Please check your internet connection</string>
    <string name="name">Name</string>
    <string name="submit">submit</string>
    <string name="home">Home</string>
    <string name="contact">Contact</string>
    <string name="data_not_found">Data not found</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="description">Description</string>
    <string name="refresh_data">Refresh Data</string>
    <string name="data_binding_java">
        "package com.example.android_jetpak.activity""\n"
        "import android.content.Intent""\n"
        "import android.os.Bundle""\n"
        "import android.view.View""\n"
        "import androidx.appcompat.app.AppCompatActivity""\n"
        "import com.example.android_jetpak.R""\n"
        "import androidx.databinding.DataBindingUtil""\n"
        "import com.example.android_jetpak.BR""\n"
        "import com.example.android_jetpak.databinding.MyDataBinding""\n"
        "import com.example.android_jetpak.model.MyData""\n"

        "class DataBindingActivity : AppCompatActivity() {""\n"
        "override fun onCreate(savedInstanceState: Bundle?) {""\n"
        "super.onCreate(savedInstanceState)""\n"
        "val binding: MyDataBinding = DataBindingUtil.setContentView(this, R.layout.my_data)""\n"
        "val mData = MyData()""\n"
        "binding.setVariable(BR.mData, mData)""\n"
        "binding.executePendingBindings()""\n"
        "}""\n"

        "fun viewSourceCodeBtn(view: View) {""\n"
        "NavigationController.navigateToMySourceCodeActivity(this, pageNo)""\n"
        "}""\n"
        "}""\n"
        "\n"
        "\n"
        "\n"
        "\n"
        "package com.example.android_jetpak.model""\n"
        "class MyData {""\n"
        "var name: String = "darshna Kumari""\n"
        "var email: String = "darshnakumari95@outlook.com""\n"
        "var education: String = "B.Tech CS""\n"
        "var technical_skill: String = "Android""\n"
        "var exp: String = "3""\n"
        "}""\n""
    </string>
    <string name="two_way_data_binding">
        "package com.example.android_jetpak.activity""\n"
        "import android.os.Bundl""\n"
        "import androidx.appcompat.app.AppCompatActivity""\n"
        "import androidx.databinding.DataBindingUtil""\n"
        "import com.example.android_jetpak.R""\n"
        "import com.example.android_jetpak.databinding.ActivityTwoWayDatabindingBinding""\n"
        "import com.example.android_jetpak.model.Contact""\n"
        "\n"
        "class TwoWayDataBinding : AppCompatActivity() {""\n"
        "private var pageNo""\n"
        "override fun onCreate(savedInstanceState: Bundle?) {""\n"
        "super.onCreate(savedInstanceState)""\n"
        "setContentView(R.layout.activity_two_w-ay_databinding)""\n"
        "val activityMainBinding = DataBindingUtil.setContentView&lt;ActivityTwoWayDatabindingBinding&gt;(this, R.layout.activity_two_way_databinding)""\n"
        "val contact = Contact("default", "default@gmail.com")""\n"
        "activityMainBinding.mContact = contact""\n"
        "pageNo = intent.getStringExtra(Contants.PAGE_NO)""\n"
        "}""\n"
        "fun viewSourceCodeBtn(view: View) {""\n"
        "NavigationController.navigateToMySourceCodeActivity(this, pageNo)""\n"
        "}\n"
        "}"\n"
        "\n"
        "\n"
        "\n"
        "package com.example.android_jetpak.model""\n"
        "import androidx.databinding.BaseObservable""\n"
        "import androidx.databinding.Bindable""\n"
        "import androidx.databinding.library.baseAdapters.BR""\n"
        "\n"
        "class Contact(internal var name: String, internal var email: String) : BaseObservable() {""\n"
        "\n"
        "@Bindable
        "fun getName(): String {""\n"
        "return name""\n"
        "}"\n"

        "fun setName(name: String) {""\n"
        "this.name = name""\n"
        "notifyPropertyChanged(BR.name)""\n"
        "}"\n"

        "@Bindable""\n"
        "fun getEmail(): String {""\n"
        "return email""\n"
        "}"\n"

        "fun setEmail(email: String) {""\n"
        "this.email = email""\n"
        "notifyPropertyChanged(BR.email)""\n"
        "}"\n"
        "}"\n"
    </string>
    <string name="bottom_navigation_java">
        "package com.example.android_jetpak.activity""\n"
        "import android.app.job.JobInfopackage com.example.android_jetpak.activity""\n"
        "import android.app.job.JobInfo""\n"
        "import android.app.job.JobScheduler""\n"
        "import android.content.ComponentName""\n"
        "import android.content.Context""\n"
        "import android.os.Bundle""\n"
        "import android.view.Menu""\n"
        "import android.view.MenuItem""\n"
        "import androidx.appcompat.app.AppCompatActivity""\n"
        "import androidx.navigation.NavController""\n"
        "import androidx.navigation.Navigation""\n"
        "import androidx.navigation.ui.NavigationUI""\n"
        "import com.example.android_jetpak.R""\n"
        "import kotlinx.android.synthetic.main.activity_main_bottom.*""\n"
        "import kotlinx.android.synthetic.main.activity_main.*""\n"
        ""\n"
        "class BottomNavigationActivity : AppCompatActivity() {""\n"
        "private lateinit var navController: NavController""\n"
        "override fun onCreate(savedInstanceState: Bundle?) {""\n"
        "super.onCreate(savedInstanceState)""\n"
        "setContentView(R.layout.activity_main_bottom)""\n"
        "setSupportActionBar(mToolbar)""\n"
        "navController = Navigation.findNavController(this, R.id.nav_host_fragment)""\n"
        "setupBottomNavMenu(navController)""\n"
        "setupSideNavigationMenu(navController)""\n"
        "setupActionBar(navController)""\n"
        "}""\n"
        "private fun setupBottomNavMenu(navController: NavController) {""\n"
        "bottom_nav?.let {""\n"
        "NavigationUI.setupWithNavController(it, navController)""\n"
        "}""\n"
        "}""\n"
        "private fun setupSideNavigationMenu(navController: NavController) {""\n"
        "nav_view?.let {""\n"
        "NavigationUI.setupWithNavController(it, navController)""\n"
        "}""\n"
        "}""\n"
        "private fun setupActionBar(navController: NavController) {""\n"
        "NavigationUI.setupActionBarWithNavController(this, navController, drawer_layout)""\n"
        "}""\n"
        "override fun onOptionsItemSelected(item: MenuItem?): Boolean {""\n"
        "val navController = Navigation.findNavController(this, R.id.nav_host_fragment)""\n"
        "val navigated = NavigationUI.onNavDestinationSelected(item!!, navController)""\n"
        "return navigated || super.onOptionsItemSelected(item)""\n"
        "}""\n"
        "override fun onSupportNavigateUp(): Boolean {""\n"
        "return NavigationUI.navigateUp(""\n"
            "Navigation.findNavController(this, R.id.nav_host_fragment),""\n"
            "drawer_layout""\n"
        ")""\n"
        "}""\n"
        "}""\n"
        ""\n"
        "package com.example.android_jetpak.fragment""\n"
        "import android.os.Bundle""\n"
        "import android.view.LayoutInflater""\n"
        "import android.view.View""\n"
        "import android.view.ViewGroup""\n"
        "import androidx.fragment.app.Fragment""\n"
        "import com.example.android_jetpak.R""\n"
        "import com.example.android_jetpak.utility.NavigationController""\n"
        ""\n"
        "class NavContactFragment :Fragment(){""\n"
        "lateinit var mView: View""\n"
        "override fun onCreateView(inflater: LayoutInflater, container: ViewGroup?, savedInstanceState: Bundle?): View? {""\n"
        "mView = inflater.inflate(R.layout.contact_fragment, container, false)""\n"
        "return mView""\n"
        "}""\n"
        "fun viewSourceCodeBtn(view: View) {""\n"
        "NavigationController.navigateToMySourceCodeActivity(, "3")""\n"
        "}""\n"
        "}""\n"
        "\n"
        "package com.example.android_jetpak.fragment""\n"
        "import android.os.Bundle""\n"
        "import android.view.LayoutInflater""\n"
        "import android.view.View""\n"
        "import android.view.ViewGroup""\n"
        "import androidx.fragment.app.Fragment""\n"
        "import com.example.android_jetpak.R""\n"
        "import com.example.android_jetpak.utility.NavigationController""\n"
        ""\n"
        "class NavContactFragment :Fragment(){""\n"
        "lateinit var mView: View""\n"
        "override fun onCreateView(inflater: LayoutInflater, container: ViewGroup?, savedInstanceState: Bundle?): View? {""\n"
        "mView = inflater.inflate(R.layout.home_fragment, container, false)""\n"
        "return mView""\n"
        "}""\n"
        "fun viewSourceCodeBtn(view: View) {""\n"
        "NavigationController.navigateToMySourceCodeActivity(, "3")""\n"
        "}""\n"
        "}""\n"

    </string>
</resources>