<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
                name="mContact"
                type="com.my.android_jetpak.model.Contact" />
    </data>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient_color"
                android:theme="@style/ToolbarTheme" />


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient_play_bg"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp">


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/_5sdp"
                    android:weightSum="2">

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|start"
                        android:layout_weight=".7"
                        android:text="@string/name"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_14sdp" />

                <TextView
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".05"
                        android:gravity="center"
                        android:text="@string/colon"
                        android:textColor="@android:color/black" />


                <EditText
                        android:id="@+id/nameEt"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center|start"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_weight="1.3"
                        android:background="@null"
                        android:hint="@string/please_enter_your_name"
                        android:singleLine="true"
                        android:text="@={mContact.name}"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_14sdp" />
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/_5sdp"
                    android:weightSum="2">

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|start"
                        android:layout_weight=".7"
                        android:text="@string/email"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_14sdp" />
                <TextView
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".05"
                        android:gravity="center"
                        android:text="@string/colon"
                        android:textColor="@android:color/black" />


                <EditText
                        android:id="@+id/emailEt"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center|start"
                        android:layout_weight="1.5"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_14sdp"
                        android:background="@null"
                        android:singleLine="true"
                        android:hint="@string/please_enter_your_email_id"
                        android:text="@={mContact.email}"
                      android:layout_marginStart="@dimen/_10sdp" />

            </LinearLayout>

            <Button
                    android:id="@+id/submitButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/gradient_color"
                    android:text="@string/submit" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{mContact.name}"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_14sdp"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{mContact.email}"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_14sdp"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="@dimen/_100sdp"
                    android:textStyle="bold"
                    android:padding="@dimen/_10sdp"
                    android:onClick="viewSourceCodeBtn"
                    android:text="@string/view_source_code"
                    android:textSize="@dimen/_20sdp" />

        </LinearLayout>
    </LinearLayout>

</layout>