<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
                name="mData"
                type="com.my.android_jetpak.model.MyData" />
    </data>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_play_bg"
            android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient_color"
                android:theme="@style/ToolbarTheme" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="horizontal"
                    android:padding="@dimen/_5sdp"
                    tools:ignore="UselessParent">

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".7"
                        android:text="@string/name"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_14sdp" />

                <TextView
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".05"
                        android:gravity="center"
                        android:text="@string/colon"
                        android:textColor="@android:color/black" />

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.3"
                        android:paddingStart="@dimen/_10sdp"
                        android:text="@{mData.name}"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_14sdp" />

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="horizontal"
                    android:padding="@dimen/_5sdp"
                    tools:ignore="UselessParent">

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".7"
                        android:text="@string/email"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_14sdp" />

                <TextView
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".05"
                        android:gravity="center"
                        android:text="@string/colon"
                        android:textColor="@android:color/black" />

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.3"
                        android:paddingStart="@dimen/_10sdp"
                        android:text="@{mData.email}"
                        android:singleLine="true"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_14sdp" />

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="horizontal"
                    android:padding="@dimen/_5sdp"
                    tools:ignore="UselessParent">

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".7"
                        android:text="@string/education"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_14sdp" />

                <TextView
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".05"
                        android:gravity="center"
                        android:text="@string/colon"
                        android:textColor="@android:color/black" />

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.3"
                        android:paddingStart="@dimen/_10sdp"
                        android:text="@{mData.education}"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_14sdp" />

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="horizontal"
                    android:padding="@dimen/_5sdp"
                    tools:ignore="UselessParent">

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".7"
                        android:text="@string/technical_skill"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_14sdp" />

                <TextView
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".05"
                        android:gravity="center"
                        android:text="@string/colon"
                        android:textColor="@android:color/black" />

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.3"
                        android:paddingStart="@dimen/_10sdp"
                        android:text="@{mData.technical_skill}"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_14sdp" />

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="horizontal"
                    android:padding="@dimen/_5sdp"
                    tools:ignore="UselessParent">

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".7"
                        android:text="@string/experience"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_14sdp" />

                <TextView
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_weight=".05"
                        android:gravity="center"
                        android:text="@string/colon"
                        android:textColor="@android:color/black" />

                <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.3"
                        android:paddingStart="@dimen/_10sdp"
                        android:text="@{mData.exp}"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_14sdp" />

            </LinearLayout>


            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_100sdp"
                    android:onClick="viewSourceCodeBtn"
                    android:padding="@dimen/_10sdp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:text="@string/view_source_code"
                    android:textSize="@dimen/_20sdp" />
        </LinearLayout>

    </LinearLayout>

</layout>